# reminder

./: .gitignore
reminder/: pyproject.toml
reminder/src/reminder/: cli.py
reminder/src/reminder/domain/: intent.py  schedule_intent.py
reminder/tests/reminder/domain/: test_schedule_intent.py
