[project]
name = "reminder"
version = "0.1.0"
description = ""
authors = [
    {name = "JVitoroliv3ira",email = "jvitoroliveira0711@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer (>=0.20.0,<0.21.0)"
]

[tool.poetry]
packages = [{include = "reminder", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
